# oh-my-ubuntu

./: README.md  install
home/: .condarc  .gitconfig  .tmux.conf  .zsh_history.city945  .zsh_history.md  .zshrc
home/.config/code-server/: config.yaml
home/.env/: env.sh  startup.sh
home/.env/docker/city945/: carla.yml  docker-compose.yml
home/.env/docker/city945/services/: docker-registry-ui.yml  (+1 more)
home/.env/docker/guests/: docker-compose.yml
home/.env/docker/vm/: docker-compose.yml  env.sh  startup.sh  wrapper-v1.Dockerfile  wrapper.Dockerfile
home/.fzf/: install  install_raw
home/.local/shell/: profile.sh
home/.ssh/: config
others/: gnome-term.properties  iterm2-Profiles.json
others/docker/city945/: autoware.yml  docker-compose.yml
others/docker/city945/services/: docker-gitlab-runner.yml  docker-gitlab.yml  docker-nginx.yml  docker-registry-ui.yml  docker-ubuntu-server.yml
others/docker/guests/: xx.sh
others/filesnippets/: README_TEMPLATE.md  backup_amax4090.sh  backup_precision.sh
others/filesnippets/cmake/: CMakeLists.txt  UsePackage.cmake  ceres.cmake  g2o.cmake  global_defination.cmake  glog.cmake  googletest.cmake  gtsam.cmake  opencv.cmake  pcl.cmake  utils-cpp.cmake  utils-pcl.cmake  yaml-cpp.cmake
others/filesnippets/install_scripts/: install_docker.sh  install_g2o-202012.sh  install_gtsam-4.1.sh  install_jetson_ros-melodic.sh  install_mmlab2.sh  install_opencv-4.5.3.sh  install_pcl.sh
root/etc/: hosts
root/etc/docker/: daemon.json
root/etc/samba/: smb.conf
root/usr/share/applications/: meshlab.desktop
(+8 files in other folders)
